--- a/shop_1/src/main/resources/Language_en_UK.properties
+++ b/shop_1/src/main/resources/Language_en_UK.properties
@@ -1,1 +1,29 @@
-label.title=title
+shop=Shop
+file=File
+help=Help
+back=Back
+save=Save
+
+menuItem.new=New
+menuItem.close=Close
+menuItem.about=About
+menuItem.statistic=Statistic
+
+title=Title
+incomingDate=Incoming date
+serialNumber=Serial number
+count=Amount
+condition=Condition
+
+search=Search
+new=New
+update=Update
+remove=Remove
+
+enter_title=Enter title:
+
+year=Year:
+month=Month:
+day=Day:
+
+server.error=Server isn`t working!
