--- a/shop_1/src/main/resources/Language_en_UK.properties
+++ b/shop_1/src/main/resources/Language_en_UK.properties
@@ -3,6 +3,7 @@ file=File
 help=Help
 back=Back
 save=Save
+refresh=Refresh
 
 menuItem.new=New
 menuItem.close=Close
@@ -27,3 +28,5 @@ month=Month:
 day=Day:
 
 server.error=Server isn`t working!
+
+host=192.168.0.108
