--- a/shop_1/src/main/resources/Language_en_US.properties
+++ b/shop_1/src/main/resources/Language_en_US.properties
@@ -15,6 +15,9 @@ incomingDate=Incoming date
 serialNumber=Serial number
 count=Amount
 condition=Condition
+address=Address
+titleShop=Title shop
+newShop=New shop
 
 search=Search
 new=New
@@ -28,4 +31,3 @@ month=Month:
 day=Day:
 
 server.error=Server isn`t working!
-host=192.168.0.108
