--- a/shop_1/src/main/resources/Language_en_UK.properties
+++ b/shop_1/src/main/resources/Language_en_UK.properties
@@ -4,12 +4,10 @@ help=Help
 back=Back
 save=Save
 refresh=Refresh
-
 menuItem.new=New
 menuItem.close=Close
 menuItem.about=About
 menuItem.statistic=Statistic
-
 title=Title
 incomingDate=Incoming date
 serialNumber=Serial number
@@ -18,14 +16,18 @@ condition=Condition
 address=Address
 titleShop=Title shop
 newShop=New shop
-
 search=Search
 new=New
 update=Update
 remove=Remove
-
 enter_title=Enter title:
 year=Year:
 month=Month:
 day=Day:
 server.error=Server isn`t working!
+username=Username
+login=LOGIN
+password=Password
+setting=Setting
+language=Language
+screenResolution=Screen Resolution
