--- a/shop_1/src/main/resources/Language_en_US.properties
+++ b/shop_1/src/main/resources/Language_en_US.properties
@@ -31,3 +31,9 @@ month=Month:
 day=Day:
 
 server.error=Server isn`t working!
+username=Username
+login=LOGIN
+password=Password
+setting=Setting
+language=Language
+screenResolution=Screen Resolution
